# fish-shell

./: .cirrus.yml  .drone.yml  .gitignore  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  Cargo.toml  Makefile.in  config_cmake.h.in
build_tools/: find_globals.fish  make_pkg.sh
cmake/: PCRE2.cmake  Rust.cmake  SQLite.cmake  Tests.cmake
doc_internal/: concurrent-execution.md
doc_src/: configuration.rst  index.rst  license.rst
docker/: docker_run_tests.sh  docker_run_tests_ci.sh
fish-rust/: Cargo.toml  build.rs
fish-rust/fast-float/: Cargo.toml  README.md
fish-rust/fast-float/src/: common.rs  decimal.rs  lib.rs  number.rs  parse.rs  simple.rs
fish-rust/fast-float/tests/: test_api.rs
fish.xcodeproj/: project.pbxproj
fishcrate/: Cargo.toml  build.rs
fishcrate/src/: fds.rs  fishffi.rs  lib.rs  topic_monitor.rs  wchar.rs
internal_docs/: Concurrency.md  strings.md
sha3/: sha3.c  sha3.h
sphinx_doc_src/: index.rst
src/: arena_alloc.h  ast.cpp  ast.h  ast.rs  autoload.cpp  autoload.h  builtin.cpp  builtin.h  builtin_argparse.cpp  builtin_bg.cpp  builtin_builtin.cpp  builtin_cd.cpp  builtin_command.cpp  builtin_commandline.cpp  builtin_complete.cpp  builtin_disown.cpp  builtin_echo.cpp  builtin_emit.cpp  builtin_fg.cpp  builtin_fish_sync.cpp  builtin_fish_sync.h  builtin_function.cpp  builtin_function.h  builtin_functions.cpp  builtin_history.cpp  builtin_jobs.cpp  builtin_path.cpp  builtin_random.cpp  builtin_read.cpp  builtin_set.cpp  builtin_set_color.cpp  builtin_source.cpp  builtin_string.cpp  builtin_test.cpp  builtin_type.cpp  builtin_wait.cpp  (+123 more)
(+120 files in other folders)
