[package]
name = "fast-float"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
repository = "https://github.com/aldanor/fast-float-rust"
documentation = "https://docs.rs/fast-float"
description = "Fast floating-point number parser."
keywords = ["parser", "parsing", "parse", "float", "no-std"]
categories = ["parser-implementations", "parsing", "text-processing", "algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"
exclude = ["benches/*", "extras/*"]

[dev-dependencies]
lexical-core = "0.7"
hexf-parse = "0.1"
ryu = "1.0"
fastrand = "1.4"
num-bigint = "0.3"

[lib]
doctest = false
